Preventing overflow on tile footers

--- a/_tiles.styl
+++ b/_tiles.styl
@@ -206,6 +206,10 @@ tiles()
 			position absolute
 			width 100%
 
+		> div
+			//pads a bit and prevents mysterious overflow
+			padding 0 padding-base 
+
 	// colors
 	tile-type(color)
 		header
